# Riemannian_Diffusion

./: .gitignore  Experiment_plan.md  Idea_formulation.md  README.md  REPORT.md  diagnostic_plan.md  extension.tex  extension_report.md  joint_limit_extension.tex  mathematical_formulation.tex  metric.md  modificatin.md  noise_stationary_fix.md  pyproject.toml  related_works.md  requirements.txt  training_diagnosis_2026-05-09.md
outputs/baselines_stepD_H16/: REPORT.md  all_metrics.json  train_times_sec.json
outputs/diagnostic/: baseline_bc_eval.json  baseline_bc_perfect_eval.json  baseline_dp_a_perfect_eval.json  baseline_dp_official_channel_eval.json  baseline_dp_official_eval.json  baseline_dp_official_perfect_eval.json  baseline_projected_eval.json  baseline_projected_perfect_eval.json  dp_b_eval.json  dp_c_eval.json  dp_c_final.json  dp_c_ood25.json  dp_c_perfect_final.json  dp_c_perfect_ood25.json  dp_c_perfect_sweep.json  inference_timing_path.json  ours_analytic_ood25.json  per_ctx_mode_collapse.json  per_ctx_mode_collapse_perfect.json  phase1.json  phase1_5.json  phase2.json  phase3.json  phase4_endpoint.json  phase5_final.json  (+6 more)
smcdp/: __init__.py  baselines.py  charts.py  distributions.py  lie_se3.py  losses.py  manifolds.py  manifolds_pose.py  metrics.py  sampling.py  score_net.py  sde.py  trajectories.py  trajectories_pose.py
tests/: test_bounded_chart.py  test_bounded_chart_demo_gen.py  test_bounded_chart_manifold.py  test_bounded_chart_trajectories.py  test_lie_se3.py  test_pose_manifold.py  test_reward_gradient_verification.py  test_v51_chart_ou.py
(+80 files in other folders)
